# vache

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
vache/: Cargo.toml
vache-vscode-extension/: .gitignore  .vscodeignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
vache-vscode-extension/client/: package.json  tsconfig.json
vache-vscode-extension/client/src/: extension.ts
vache-vscode-extension/src/: main.rs
vache-vscode-extension/syntaxes/: vache.tmLanguage.json  vache.tmLanguage.yml
vache/src/: codes.rs  compile.rs  config.rs  context.rs  grammar.pest  grammar.rs  lft_name_gen.rs  lib.rs  main.rs  miring.rs  mode_farmer.rs  normalize.rs  prelude.rs  reporter.rs  scoped.rs  typing.rs
vache/src/anf/: arg.rs  block.rs  branch.rs  fun.rs  location.rs  mod.rs  place.rs  pointer.rs  program.rs  reference.rs  rvalue.rs  stmt.rs
vache/src/ast/: arg.rs  block.rs  enumeration.rs  expr.rs  fun.rs  fun_sig.rs  mod.rs  mode.rs  namespaced.rs  place.rs  primitives.rs  program.rs  reporting.rs  selfvisitor.rs  span.rs  stmt.rs  structure.rs  traits.rs  ty.rs  var.rs
vache/src/borrowing/: borrow.rs  checker.rs  flow.rs  fun_flow.rs  invalidation.rs  ledger.rs  liveness.rs  loans.rs  mod.rs  tree.rs
vache/src/examples/: arrays.rs  borrows.rs  change_field.rs  custom_addition.rs  id_fn.rs  ifs.rs  is_even.rs  matrices.rs  mod.rs  multiple_refs.rs  out_of_scope.rs  structure.rs  structures.rs  while_loop.rs
vache/src/interpret/: env.rs  interpreter.rs  mod.rs  value.rs
vache/src/mir/: fun.rs  graph.rs  instr.rs  mod.rs  place.rs  program.rs  rvalue.rs
vache/src/precompile/: mod.rs  program.rs  stmt.rs
vache/src/prelude/: cow.rs  field.rs  functions.rs  imports.rs  integer.rs  lints.rs  mod.rs  range.rs  reexports.rs  res.rs  string.rs  var.rs  vec.rs
vache/src/tast/: arg.rs  block.rs  expr.rs  fun.rs  mod.rs  mode.rs  pat.rs  place.rs  program.rs  stmt.rs  stratum.rs  var.rs
vache/src/utils/: arena.rs  mod.rs  multiset.rs  set.rs
vache/tests/: main.rs
vache/tests/exec/: array_swap.vat  arrays.rs  assert.vat  bool.vat  borrows.rs  break.vat  bubble_sort.vat  change_field.rs  clone_on_invalid.vat  collatz.vat  cond.vat  double_n.vat  empty_array.vat  enum_instance.vat  fibo_rec.vat  fibo_while.vat  generator.vat  hello_world.rs  id_fn.rs  in_place_mut.vat  incr.vat  incr_and_return.vat  loop.vat  match.vat  matrix_naive_transpose.vat  matrix_transpose.vat  min_max.vat  mod.rs  move_if_not_live.vat  mut_in_array.vat  nested_block.vat  no_clone_if_not_live.vat  out_of_scope.rs  out_of_scope.vat  reassign.vat  (+18 more)
(+134 files in other folders)
