[package]
name = "stratum"
authors=["Jonathan ARNOULT <jonathan.arnoult@polytechnique.edu>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "stratum_lib"
path = "src/lib.rs"

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
prettyplease = "0.2.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
rug = "1.19.2"
syn = "2.0.14"
