[package]
name = "vache"
authors=["Jonathan ARNOULT <jonathan.arnoult@polytechnique.edu>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "vache_lib"
path = "src/lib.rs"

[[bin]]
name = "vache"
path = "src/main.rs"

[dependencies]
prettyplease = "0.2.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
rug = "1.19.2"
slab = "0.4.8"
syn = "2.0.14"
string-builder = "0.2.0"
unzip3 = "1.0.0"