[package]
name = "vache-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
ropey = "1.6.0"
vache = { path = "../vache" }