[package]
name = "vache"
authors=["Jonathan ARNOULT <jonathan.arnoult@polytechnique.edu>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "vache_lib"
path = "src/lib.rs"

[[bin]]
name = "vache"
path = "src/main.rs"

[dependencies]
prettyplease = "0.2.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
num-traits = "0.2.15"
num-bigint = "0.4.3"
slab = "0.4.8"
syn = "2.0.14"
string-builder = "0.2.0"
priority-queue = "1.3.1"
serial_test = "2.0.0"
pest = "2.6.0"
pest_derive = "2.6.0"
lazy_static = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
bumpalo = "3.13.0"
unindent = "0.2.1"
codespan-reporting = "0.11.1"
anyhow = "1.0.71"
codespan = "0.11.1"
itertools = "0.10.5"
double-ended-peekable = "0.0.2"

[dev-dependencies]
vache-tests-proc = { path = "../vache-tests-proc" }
